# gol

./: CMakeLists.txt
src/: main.cpp
